# SiftByExif

./: .gitignore  LICENSE  README.md  ROADMAP.md  build_mac.sh  build_win.bat  main.py  pyproject.toml
.github/workflows/: build.yml
siftbyexif/: __init__.py  brands.py  cities.json  gps_sorter.py  gui.py  renamer.py  scanner.py
